# programming-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
chapter1/tour01/: Cargo.toml
chapter1/tour24/: Cargo.toml
chapter1/tour24/src/: main.rs
chapter1/tour25-iron-gcd/: Cargo.toml
chapter1/tour25-iron-gcd/src/: main.rs
chapter10/: README.md
chapter10/src/: btree.rs  lib.rs  pattern.rs  pattern_at.rs  pattern_reference.rs  pattern_struct_and_tuple.rs
chapter11/example1/: Cargo.toml  README.md  configuration.txt
chapter11/example1/src/: fully_qualified.rs  lib.rs  (+4 more)
chapter12/: Cargo.toml  README.md
chapter12/examples/: complex_neg.rs  index.rs
chapter12/src/: index.rs  lib.rs  mod.rs
chapter13/: README.md
chapter13/examples/: as_ref.rs  cow.rs  default.rs  deref.rs  drop.rs  from.rs  redef.rs  sized.rs
chapter13/src/: as_ref.rs  cow.rs  deref.rs  drop.rs  from.rs  lib.rs  sized.rs
chapter14/examples/: closure01.rs
chapter14/src/: lib.rs
chapter2/mandelbrot/: Cargo.toml
chapter3/rust-type/: Cargo.toml  README.md
chapter4/bollow/: Cargo.toml
chapter4/owner_share/: Cargo.toml
chapter6/: README.md
chapter6/expression/: Cargo.toml
chapter7/: README.md
chapter7/result/: Cargo.toml
chapter8/: README.md
chapter8/make_library/: Cargo.toml
chapter8/module_fern_sim/: Cargo.toml  README.md
chapter8/test_and_documents/: Cargo.toml
chapter9/: README.md
chapter9/auto-impl-trait/: Cargo.toml
chapter9/implimentation/: Cargo.toml
chapter9/lifetime-param/: Cargo.toml
chapter9/struct-with-name/: Cargo.toml
(+32 files in other folders)
